--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard - Mamandut Cake & Cookies</title>
   <link rel="stylesheet" href="admin.css">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+
 </head>
 <body>
 
